--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,12 @@
                 <li><a href="Project.html" class="lang" data-lang-key="MenuProject"></a></li>
                 <li><a href="#" class="lang" data-lang-key="MenuContact"></a></li>
             </ul>
+            <button class="hamburger-menu" onclick="toggleMenu()">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            
         </nav>        
         <div>
             <button class="btnconnectmetamask lang" data-lang-key="BtnConnectWallet"></button>
@@ -63,6 +69,7 @@
     </footer>
 
     <!--Scripte-->
+    <script src="css/hamburger-menu.js"></script>
     <script src="js/colors.js"></script>
     <script src="js/language.js"></script>
     <script src="js/comments.js"></script>
