--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,13 @@
 <body>
 
     <!--Header-->
+    <!-- Hamburger menu -->
+<button class="hamburger-menu" onclick="toggleMenu()">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+</button>
+
     <header class="header-section">
         <div>
             <img src="img/logo.png">
@@ -22,13 +29,7 @@
                 <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
                 <li><a href="Project.html" class="lang" data-lang-key="MenuProject"></a></li>
                 <li><a href="#" class="lang" data-lang-key="MenuContact"></a></li>
-            </ul>
-            <button class="hamburger-menu" onclick="toggleMenu()">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            
+            </ul>            
         </nav>        
         <div>
             <button class="btnconnectmetamask lang" data-lang-key="BtnConnectWallet"></button>
@@ -69,7 +70,7 @@
     </footer>
 
     <!--Scripte-->
-    <script src="css/hamburger-menu.js"></script>
+    <script src="js/hamburger-menu.js"></script>
     <script src="js/colors.js"></script>
     <script src="js/language.js"></script>
     <script src="js/comments.js"></script>
