--- a/Index.html
+++ b/Index.html
@@ -16,20 +16,18 @@
         <div>
             <img src="img/logo.png">
         </div>
-        <nav class="mobile-nav">
+        <nav class="menu">
+            <ul>
+                <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
+                <li><a href="Project.html" class="lang" data-lang-key="MenuProject"></a></li>
+                <li><a href="#" class="lang" data-lang-key="MenuContact"></a></li>
+            </ul>
             <button class="hamburger-menu" onclick="toggleMenu()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </button>
-            <ul class="menu mobile-menu" id="mobile-menu">
-                <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
-                <li><a href="Project.html" class="lang" data-lang-key="MenuProject"></a></li>
-                <li><a href="#" class="lang" data-lang-key="MenuContact"></a></li>
-            </ul>
-          </nav>
-          
-
+        </nav>
        <!--  <nav class="menu">
             <ul>
                 <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
