--- a/Index.html
+++ b/Index.html
@@ -16,18 +16,20 @@
         <div>
             <img src="img/logo.png">
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
-                <li><a href="Project.html" class="lang" data-lang-key="MenuProject"></a></li>
-                <li><a href="#" class="lang" data-lang-key="MenuContact"></a></li>
-            </ul>
+        <div class="menu-container">
+            <nav class="menu">
+                <ul>
+                    <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
+                    <li><a href="Project.html" class="lang" data-lang-key="MenuProject"></a></li>
+                    <li><a href="#" class="lang" data-lang-key="MenuContact"></a></li>
+                </ul>
+            </nav>
             <button class="hamburger-menu" onclick="toggleMenu()">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </button>
-        </nav>
+        </div>
        <!--  <nav class="menu">
             <ul>
                 <li><a href="#" class="menuhome lang" data-lang-key="MenuHome"></a></li>
