--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title class="lang" data-lang-key="HomepageTitel"></title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>   
 </head>
 
@@ -13,6 +13,10 @@
 
     <!--Header-->
     <header class="header-section">
+        <input type="checkbox" id="hamburger-menu-toggle">
+<label for="hamburger-menu-toggle" class="hamburger-menu-icon">
+    <span class="hamburger-menu-line"></span>
+</label>
         <div>
             <img src="img/logo.png">
         </div>
