--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <title class="lang" data-lang-key="HomepageTitel"></title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/stylemobile.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
     </head>
@@ -35,6 +36,7 @@
             <div class="hero-section">
                 <div class="hero-section-left">
                     <h2><span class="hero-titel lang" data-lang-key="HeroTitel"></span></h2>
+                    <h2><span class="hero-titel-mobile lang" data-lang-key="HeroTitel"></span></h2>
                     <p><span class="herotext lang" data-lang-key="HeroText"></span></p>
                     <button class="btnspendmeacoffee lang" data-lang-key="BtnSpendMeaCoffee"></button>
                 </div>
