--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/stylemobile.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    </head>
+</head>
 
 <body>
     <nav>
@@ -32,16 +32,18 @@
         </div>
     </nav>
     <main class="main-content">
-            <div class="hero-section">
-                <div class="hero-section-left">
-                    <h2><span class="hero-titel lang" data-lang-key="HeroTitel"></span></h2>
-                    <p><span class="herotext lang" data-lang-key="HeroText"></span></p>
-                    <button class="btnspendmeacoffee lang" data-lang-key="BtnSpendMeaCoffee"></button>
+        <div class="hero-section">
+            <div class="hero-section-left">
+                <div class="gap">
+                    <h2><span class="hero-titel lang" id="herotitel"></span></h2>
                 </div>
-                <div class="hero-section-right">
-                    <img class="coffee-image" src="img/coffee.png" alt="Coffee">
-                </div>
+                <p><span class="herotext lang" data-lang-key="HeroText"></span></p>
+                <button class="btnspendmeacoffee lang" data-lang-key="BtnSpendMeaCoffee"></button>
             </div>
+            <div class="hero-section-right">
+                <img class="coffee-image" src="img/coffee.png" alt="Coffee">
+            </div>
+        </div>
         <section class="spender-message-container">
             <div class="spender-message-section">
                 <h2 class="spender-message-header lang" data-lang-key="SpenderMessageTitel"></h2>
@@ -62,9 +64,10 @@
     </footer>
 
     <!--Scripte-->
-    <script src="js/hamburger-menu.js"></script>
-    <script src="js/colors.js"></script>
     <script src="js/language.js"></script>
+    <script src="js/textwriting.js"></script>
+    <script src="js/hamburger-menu.js"></script>
+    <script src="js/colors-text-sizes.js"></script>
     <script src="js/comments.js"></script>
 </body>
 
