--- a/Contact.html
+++ b/Contact.html
@@ -34,27 +34,26 @@
     </nav>
     <div class="hero-section-contact">
         <div class="hero-section-tab">
-            <h2 class="contact-header lang" data-lang-key="ContactHeader"></h2>
+            <h2 class="contact-titel lang" id="contacttitel"></h2>
             <p class="contact-text lang" data-lang-key="ContactText"></p>
+            <a href="https://www.example.com"><img src="img/discord-logo.svg" class="discord-logo" alt="Discord Logo"></a>
             <!-- Form (https://formsubmit.co/) -->
-                <form class="contact-form" action="https://formsubmit.co/a7aff2e60c7221e8e31dbc2fca08aff0" method="POST">
-                    <label class="form-name" for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                    <label for="email">E-Mail:</label>
-                    <input type="email" id="email" name="email" required>
-                    <label for="message">Nachricht:</label>
-                    <textarea id="message" name="message" required></textarea>
-                    <button type="submit">Senden</button>
-                </form>
+            <form class="contact-form" action="https://formsubmit.co/a7aff2e60c7221e8e31dbc2fca08aff0" method="POST">
+                <label class="form-name lang" for="name" data-lang-key="FormName">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label class="form-email lang" for="email" data-lang-key="FormEmail">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label class="form-message lang" for="message" data-lang-key="FormMessage">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <!-- Verstecktes Feld zur Verhinderung von Spam -->
+                <input type="hidden" name="_captcha" value="">
+                <button type="submit" class="lang" data-lang-key="ContactButton"></button>
+            </form>
+
         </div>
 
 
     </div>
-
-
-
-
-
 
 
 
@@ -74,9 +73,12 @@
 
     <!--Scripte-->
     <script src="js/language.js"></script>
+    <script src="js/textwriting.js"></script>
+    <script>typeWriterAnimation('contacttitel', getContactTitle);</script>
     <script src="js/hamburger-menu.js"></script>
     <script src="js/active-nav.js"></script>
     <script src="js/colors-text-sizes.js"></script>
+    </script>
 </body>
 
 </html>
