--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -10,7 +9,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/stylemobile.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-</head>
+    </head>
 
 <body>
     <nav>
@@ -28,8 +27,17 @@
             </span>
         </ul>
         <div>
-            <button class="btnconnectmetamask lang" data-lang-key="BtnConnectWallet"></button>
-        </div>
+            <button class="btnconnectmetamask lang" id="connectButton" data-lang-key="BtnConnectWallet"></button>
+            <div id="profile" style="display: none;">
+                <img src="img/profile.png" alt="Profile" id="profileImage">
+                <div id="dropdown" class="dropdown-content" style="display: none;">
+                    <p id="addressLabel" class="addresslabel"></p>
+                    <p id="addressValue" class="addressvalue"></p>
+                    <p id="balanceLabel" class="balancelabel"></p>
+                    <p id="balanceValue" class="balancevalue"></p>
+                </div>
+            </div>
+        </div>        
     </nav>
     <div class="hero-section">
         <div class="hero-section-left">
@@ -63,11 +71,14 @@
 
     <!--Scripte-->
     <script src="js/language.js"></script>
-    <script src="js/textwriting.js"></script>
+    <script src="js/textwriting.js"></script><script>typeWriterAnimation('herotitel', getHeroTitle);</script>
     <script src="js/hamburger-menu.js"></script>
     <script src="js/active-nav.js"></script>
     <script src="js/colors-text-sizes.js"></script>
     <script src="js/comments.js"></script>
+    <script src="js/textwriting.js"></script>
+    <script src="jsweb3/connect-wallet.js"></script>
+
 </body>
 
 </html>
