--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/stylemobile.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    
     </head>
 
 <body>
@@ -26,7 +27,7 @@
                 <i class="fab fa-facebook"></i>
             </span>
         </ul>
-        <div>
+        <div id="walletContainer">
             <button class="btnconnectmetamask lang" id="connectButton" data-lang-key="BtnConnectWallet"></button>
             <div id="profile" style="display: none;">
                 <img src="img/profile.png" alt="Profile" id="profileImage">
@@ -78,7 +79,7 @@
     <script src="js/comments.js"></script>
     <script src="js/textwriting.js"></script>
     <script src="jsweb3/connect-wallet.js"></script>
-
+    <script src="jsweb3/wallet-cookie.js"></script>
 </body>
 
 </html>
