--- a/Contact.html
+++ b/Contact.html
@@ -29,8 +29,17 @@
             </span>
         </ul>
         <div>
-            <button class="btnconnectmetamask lang" data-lang-key="BtnConnectWallet"></button>
-        </div>
+            <button class="btnconnectmetamask lang" id="connectButton" data-lang-key="BtnConnectWallet"></button>
+            <div id="profile" style="display: none;">
+                <img src="img/profile.png" alt="Profile" id="profileImage">
+                <div id="dropdown" class="dropdown-content" style="display: none;">
+                    <p id="addressLabel" class="addresslabel"></p>
+                    <p id="addressValue" class="addressvalue"></p>
+                    <p id="balanceLabel" class="balancelabel"></p>
+                    <p id="balanceValue" class="balancevalue"></p>
+                </div>
+            </div>
+        </div>        
     </nav>
     <div class="hero-section-contact">
         <div class="hero-section-tab">
@@ -78,6 +87,9 @@
     <script src="js/hamburger-menu.js"></script>
     <script src="js/active-nav.js"></script>
     <script src="js/colors-text-sizes.js"></script>
+    <script src="jsweb3/connect-wallet.js"></script>
+    <script src="jsweb3/wallet-cookie.js"></script>
+    
     </script>
 </body>
 
