--- a/Index.html
+++ b/Index.html
@@ -32,9 +32,9 @@
             <div id="profile" style="display: none;">
                 <img src="img/profile.png" alt="Profile" id="profileImage">
                 <div id="dropdown" class="dropdown-content" style="display: none;">
-                    <p id="addressLabel" class="addresslabel"></p>
+                    <p id="addressLabel" class="addresslabel lang" data-lang-key="AdressLabel"></p>
                     <p id="addressValue" class="addressvalue"></p>
-                    <p id="balanceLabel" class="balancelabel"></p>
+                    <p id="balanceLabel" class="balancelabel lang" data-lang-key="BalanceLabel"></p>
                     <p id="balanceValue" class="balancevalue"></p>
                 </div>
             </div>
@@ -79,7 +79,9 @@
     <script src="js/comments.js"></script>
     <script src="js/textwriting.js"></script>
     <script src="jsweb3/connect-wallet.js"></script>
-    <script src="jsweb3/wallet-cookie.js"></script>
+    <script src="jsweb3/get-price.js"></script>
+    <script src="jsweb3/spend-coffee.js"></script>
+    
 </body>
 
 </html>
